--- a/help.html
+++ b/help.html
@@ -14,6 +14,6 @@
 		<td><a href="help.html">Помощь</a></td>
 		<td><a href="vs.html">Страницы пользов. сайта</a></td>
 	</tr></table></center></h3>
-	<font face="arial"><h3>Чтобы передвигатся по сайту можно нажимать на названия страниц на "Панели направления"<h3></font>
+	<font face="arial"><h3>Чтобы передвигатся по сайту можно нажимать на названия страниц на "Панели направления" которая находится выше этого текста<h3></font>
 </body>
 </html>
