--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Insider</title>
 	<meta charset="utf-8">
 	<link rel="shortcut icon" href="Logoforicon.ico" type="image/x-icon">
+	<background color="#DCDCDC"></backgrount>
 </head>
 <body>
 	<div><img src="Logo.png" alt="Logo"></div>
