--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 	<title>Insider</title>
 	<meta charset="utf-8">
 	<link rel="shortcut icon" href="Logoforicon.ico" type="image/x-icon">
-	<background color="#DCDCDC"></backgrount>
 </head>
-<body>
+<body background="#DCDCDC">
 	<div><img src="Logo.png" alt="Logo"></div>
 	<font face="arial"><h2><marquee behavior="scroll" direction="right" style="color:#F37516" >Добро пожаловать на сайт "Insider"</marquee></h2></font>
 	<h3><center><table border="5"><tr>
