--- a/sr.html
+++ b/sr.html
@@ -14,6 +14,6 @@
 		<td><a href="help.html">Помощь</a></td>
 		<td><a href="vs.html">Страницы пользов. сайта</a></td>
 	</tr></table></center></h3>
-	<font face="arial">Сайт "Insider" создан командой "office WhiteSys".</font>
+	<font face="arial">Сайт "Insider" создан командой "office WhiteSys". 2017</font>
 </body>
 </html>
