--- a/index.html
+++ b/index.html
@@ -16,5 +16,16 @@
 		<td><a href="vs.html">Страницы пользов. сайта</a></td>
 	</tr></table></center></h3>
 	<font face="arial"><center><h2>Подробнее на странице "Помощь"</h2></center></font>
+	<p align="right"><!--LiveInternet counter--><script type="text/javascript">
+	document.write("<a href='//www.liveinternet.ru/click' "+
+	"target=_blank><img src='//counter.yadro.ru/hit?t22.3;r"+
+	escape(document.referrer)+((typeof(screen)=="undefined")?"":
+	";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
+	screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
+	";"+Math.random()+
+	"' alt='' title='LiveInternet: показано число просмотров за 24"+
+	" часа, посетителей за 24 часа и за сегодня' "+
+	"border='0' width='88' height='31'><\/a>")
+	</script><!--/LiveInternet--></p>
 </body>
 </html>
