--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<link rel="shortcut icon" href="Logoforicon.ico" type="image/x-icon">
 </head>
-<body background="#DCDCDC">
+<body background color="#DCDCDC">
 	<div><img src="Logo.png" alt="Logo"></div>
 	<font face="arial"><h2><marquee behavior="scroll" direction="right" style="color:#F37516" >Добро пожаловать на сайт "Insider"</marquee></h2></font>
 	<h3><center><table border="5"><tr>
