--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<font face="arial"><h2><marquee behavior="scroll" direction="right" style="color:#F37516" >Добро пожаловать на сайт "Insider"</marquee></h2></font>
 	<h3><center><table border="5"><tr>
 		<td><a href="index.html">Главная страница</a></td>
+		<td><a href="newspw.html">Новости программного мира</a></td>
 		<td><a href="sr.html">Страница разработчиков</a></td>
 		<td><a href="help.html">Помощь</a></td>
 		<td><a href="vs.html">Страницы пользов. сайта</a></td>
