--- a/sr.html
+++ b/sr.html
@@ -10,6 +10,7 @@
 	<div><img src="Logo.png" alt="Logo"></div>
 	<h3><center><table border="5"><tr>
 		<td><a href="index.html">Главная страница</a></td>
+		<td><a href="newspw.html">Новости программного мира</a></td>
 		<td><a href="sr.html">Страница разработчиков</a></td>
 		<td><a href="help.html">Помощь</a></td>
 		<td><a href="vs.html">Страницы пользов. сайта</a></td>
