--- a/vs.html
+++ b/vs.html
@@ -17,9 +17,9 @@
 	</tr></table></center></h3>
 	<font face="arial"><center><h2>Ты можешь отправить через эл.почту (на "WhiteSys@mail.ru") то что ты хочешь увидеть на странице</h2></center></font>
 	<center><h3><table border="3"><tr>
-		<td>Тут бы могла быть твоя страница</td>
-		<td>Даже тут</td>
-		<td>Ты не поверишь но даже тут</td>
+		<td>Здесь бы могла быть твоя страница</td>
+		<td>Даже здесь</td>
+		<td>Ты не поверишь но даже здесь</td>
 	</tr></table></h3></center>
 </body>
 </html>
