--- a/sr.html
+++ b/sr.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<link rel="shortcut icon" href="Logoforicon.ico" type="image/x-icon">
 </head>
-<body> 
+<body bgcolor="#DCDCDC"> 
 	<div><img src="Logo.png" alt="Logo"></div>
 	<h3><center><table border="5"><tr>
 		<td><a href="index.html">Главная страница</a></td>
