--- a/sr.html
+++ b/sr.html
@@ -15,6 +15,7 @@
 		<td><a href="help.html">Помощь</a></td>
 		<td><a href="vs.html">Страницы пользов. сайта</a></td>
 	</tr></table></center></h3>
-	<font face="arial">Сайт "Insider" создан командой "office WhiteSys". 2017</font>
+	<center><p><font face="arial">Insider © 2017</font></p></center>
+	<center><p><font face="arial">Команда office WhiteSys</font></p></center>
 </body>
 </html>
