--- a/help.html
+++ b/help.html
@@ -16,5 +16,7 @@
 		<td><a href="vs.html">Страницы пользов. сайта</a></td>
 	</tr></table></center></h3>
 	<font face="arial"><h3>Чтобы передвигатся по сайту можно нажимать на названия страниц на "Панели направления" которая находится выше этого текста.<h3></font>
+	<center><p color="grey"><font face="arial"><a href="<center><p color="grey"><font face="arial">Insider © 2017</font></p></center>
+	<center><p color="grey"><font face="arial">Команда office WhiteSys</font></p></center>">Команда office WhiteSys</a></font></p></center>	
 </body>
 </html>
