--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	" часа, посетителей за 24 часа и за сегодня' "+
 	"border='0' width='88' height='31'><\/a>")
 	</script><!--/LiveInternet--></p>
-	<center><p color="grey"><font face="arial">Insider © 2017</font></p></center>
-	<center><p color="grey"><font face="arial"><a href="<center><p color="grey"><font face="arial">Insider © 2017</font></p></center>
-	<center><p color="grey"><font face="arial">Команда office WhiteSys</font></p></center>">Команда office WhiteSys</a></font></p></center>
+	
+	<center><p color="grey"><font face="arial">>Insider © 2017</font></p></center>
+	<center><p color="grey"><font face="arial">Команда office WhiteSys</font></p></center>
 </body>
 </html>
