--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	"border='0' width='88' height='31'><\/a>")
 	</script><!--/LiveInternet--></p>
 	
-	<center><p color="grey"><font face="arial">>Insider © 2017</font></p></center>
-	<center><p color="grey"><font face="arial">Команда office WhiteSys</font></p></center>
+	<center><p color="grey"><font face="arial">Insider © 2017</font></p></center>
+	<center><p color="grey"><font face="arial"><a href="http://vk.com/whitesys">Команда office WhiteSys</a></font></p></center>
 </body>
 </html>
