--- a/newspw.html
+++ b/newspw.html
@@ -25,6 +25,6 @@
 	<a href="https://ru.wikipedia.org/wiki/%D0%98%D1%81%D0%BA%D1%83%D1%81%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F_%D0%BD%D0%B5%D0%B9%D1%80%D0%BE%D0%BD%D0%BD%D0%B0%D1%8F_%D1%81%D0%B5%D1%82%D1%8C">Нейронные сети</a>
 	<a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D0%B9%D0%BD%D0%B8%D0%BD%D0%B3">Майнинг</a>
 	<center><p color="grey"><font face="arial">Insider © 2017</font></p></center>
-	<center><p color="grey"><font face="arial">Команда office WhiteSys</a></font></p></center>
+	<center><p color="grey"><font face="arial"><a href="http://vk.com/officewhitesys">Команда office WhiteSys</a></font></p></center>
 </body>
 </html>
