--- a/vs.html
+++ b/vs.html
@@ -21,7 +21,7 @@
 		<td>Даже здесь</td>
 		<td>Ты не поверишь но даже здесь</td>
 	</tr></table></h3></center>
-	<center><p color="grey"><font face="arial"><a href="<center><p color="grey"><font face="arial">Insider © 2017</font></p></center>
-	<center><p color="grey"><font face="arial">Команда office WhiteSys</font></p></center>">Команда office WhiteSys</a></font></p></center>
+	<center><p color="grey"><font face="arial">Insider © 2017</font></p></center>
+	<center><p color="grey"><font face="arial"><a href="http://vk.com/officewhitesys">Команда office WhiteSys</a></font></p></center>
 </body>
 </html>
