--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<h3><center><table border="5"><tr>
 		<td><a href="index.html">Главная страница</a></td>
 		<td><a href="newspw.html">Новости программного мира</a></td>
+		<td><a href="pinsites.html">Сайты</a></td>
 		<td><a href="sr.html">Страница разработчиков</a></td>
 		<td><a href="help.html">Помощь</a></td>
 		<td><a href="vs.html">Страницы пользов. сайта</a></td>
